--- a/assets/css/states/_text.scss
+++ b/assets/css/states/_text.scss
@@ -25,6 +25,9 @@
 .textDecoration-none {
     text-decoration:none;
 }
+.text-lineThrough {
+    text-decoration:line-through;
+}
 .nowrap {
     white-space:nowrap;
 }
