--- a/assets/templates/sections/jqtest/jqtest-content.html
+++ b/assets/templates/sections/jqtest/jqtest-content.html
@@ -109,7 +109,7 @@
                 $.update({
                     animate: true
                 });
-                $.circuful.circliful({
+                $.circuful.empty().circliful({
                     animation: 1,
                     animationStep: 2.25,
                     foregroundBorderWidth: app.device.isPhone ? 8 : 9.5,
