--- a/assets/templates/sections/list/resumeItemBlank.html
+++ b/assets/templates/sections/list/resumeItemBlank.html
@@ -6,6 +6,9 @@
             <div class="resume__item__control__btn resume__item__control__menu"></div>
             <div class="resume__item__control__btn resume__item__control__inbox"></div>
         </div>
+        <div class="resume__item__likes" data-active="true">
+            <div class="resume__item__likes__badge">9</div>
+        </div>
         <div class="row resume__item__header__text">
             <div class="col-xs-5 col-sm-6">
                 <div class="resume__item__photo" style="background-image:url('{ item.photo }')"></div>
