--- a/assets/css/states/_color.scss
+++ b/assets/css/states/_color.scss
@@ -1,8 +1,8 @@
 $i:0;
-@each $color in (#9471DB, #4D71DB, #FFB84D, #B871B8, #71B84D, #FFDB71, #4DB8B8, #4DB8DB, #DB94DB, #FFACC5, #FF944D, #B8DB4D, #FF7194, #6AD19F){
+@each $color in (#9471DB, #FFB84D, #B871B8, #71B84D, #FFDB71, #4DB8B8, #4DB8DB, #DB94DB, #FFACC5, #FF944D, #B8DB4D, #FF7194, #6AD19F){
     $i: $i + 1;
     .cover__bg#{$i} {
-        background-color:$color;
+        background-color:saturate($color,5%);
     }
     svg[fill-color="fill#{$i}"]{
         path, rect, polygon, circle {
