--- a/assets/css/ui/basic/_button.scss
+++ b/assets/css/ui/basic/_button.scss
@@ -12,13 +12,18 @@
     @include accelerate(true);
     border-radius:100px;
 
-    &-disabled,
-    &-loading {
+    &-disabled {
         @extend .opacity-100;
         background-color:transparent !important;
         color:$grayLight !important;
         box-shadow:inset 0 0 0 1px $grayLight !important;
         @extend .cursor-default;
+        @extend .pointerEvents-none;
+    }
+    &-loading {
+        @extend .opacity-100;
+        @extend .cursor-default;
+        @extend .pointerEvents-none;
     }
     &-loading:before {
         @extend .content-empty;
@@ -27,7 +32,8 @@
         @extend .borderRadius-circle;
         width:14px;
         height:14px;
-        border:2px solid $grayLight;
+        border-style:solid;
+        border-width:2px;
         border-right-color:transparent;
         margin:-2px 10px 0 -5px;
         animation:btn-loading-spinner .8s infinite linear;
@@ -56,6 +62,16 @@
         font-size:24px;
         line-height:58px;
         padding:0 45px 2px;
+
+        &.btn-white,
+        &.btn-success,
+        &.btn-primary,
+        &.btn-danger,
+        &.btn-warning {
+            min-width:62px;
+            height:62px;
+            line-height:60px;
+        }
     }
     &-xl {
         min-width:60px;
