--- a/assets/templates/modules/shareButton.html
+++ b/assets/templates/modules/shareButton.html
@@ -31,7 +31,7 @@
     });
 
     this.on("unmount", function(){
-        this.share.destroy();
+        if (this.share) this.share.destroy();
     });
 
 </script>
