--- a/public/templates/default/resume/basic/index.html
+++ b/public/templates/default/resume/basic/index.html
@@ -6,7 +6,8 @@
 <style>
 * {margin:0; padding:0}
 body {
-	background: #fff;
+	background:#fff;
+	min-height:{{ width * 1.285 }}px;
 }
 .stamp {
 	display:block;
@@ -26,7 +27,9 @@ body {
 
     {{ content | safe }}
 
-	<a href="http://resumekraft.ru" class="stamp"></a>
+	{% if stamp %}
+        <a href="http://resumekraft.ru" class="stamp"></a>
+    {% endif %}
 
 </body>
 </html>
